--- a/crossdock/Dockerfile
+++ b/crossdock/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:2.7
 
 ENV APPDIR /usr/src/app/
+ARG crossdock_tornado
+ENV CROSSDOCK_TORNADO=$crossdock_tornado
 RUN mkdir -p ${APPDIR}
 WORKDIR ${APPDIR}
 
@@ -19,6 +21,7 @@ RUN pip install --no-cache-dir -r requirements-dev.txt
 RUN pip install --no-cache-dir -r requirements-tests.txt
 RUN pip install --no-cache-dir -r requirements.txt
 RUN python setup.py install
+RUN pip install --no-cache-dir "tornado${CROSSDOCK_TORNADO}"
 
 COPY crossdock ${APPDIR}/crossdock/
 COPY crossdock/setup_crossdock.py ${APPDIR}
