--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,7 @@ env:
 matrix:
   include:
   - python: "2.7"
-    env: TORNADO=">=4,<5" CROSSDOCK=1 CROSSDOCK_TORNADO=">=4,<5"
-  - python: "2.7"
-    env: TORNADO=">=5,<6" CROSSDOCK=1 CROSSDOCK_TORNADO=">=4,<5"
+    env: TORNADO=">=4,<5" CROSSDOCK=1
   - python: "2.7"
     env: TORNADO=">=5,<6" COVER=1
   - python: "3.5"
